Modified TileLoaderGameObjects Implementation of its Interface - Modified the loadObjects method, delegating to another method the task of adding GameObjects to its data structures